@@ -1,5 +1,7 @@
 *SVN*
 
+* Added $CAPISTRANO:HOST$ placeholder in commands, which will be replaced with the name of the host on which the command is executing [Jamis Buck]
+
 * Added -e switch to explain specific task. Added -X to extend -x. Made -h much briefer. Added -T to list known tasks. [Jamis Buck]
 
 * Added namespaces for tasks [Jamis Buck]
